Remove last line-icon margin for fix align

--- a/src/styles/components/social.pcss
+++ b/src/styles/components/social.pcss
@@ -66,6 +66,10 @@
   display: inline-flex;
   border-bottom: 7px solid var(--pink);
   margin-right: 70px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .social-icons {
